// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PrimaryScreenView > matches the DOM-structure snapshot: all-clear (4d) 1`] = `
<div>
  <div
    data-connection-state="connected"
    data-role="primary-screen"
  >
    <section
      aria-label="Feed"
      data-connection-state="connected"
      data-role="feed"
      role="region"
    >
      <div
        data-role="feed-scroll"
      >
        <header
          data-role="feed-header"
        >
          <div
            data-role="kiln-mark"
          >
            <img
              alt=""
              aria-hidden="true"
              data-role="kiln-glyph"
              src="/kiln-mark.svg"
            />
            <span
              data-role="kiln-wordmark"
            >
              Kiln
            </span>
          </div>
          <div
            data-role="header-status"
          >
            <button
              aria-controls="header-status-panel"
              aria-expanded="false"
              aria-haspopup="true"
              data-open="false"
              data-role="feed-status"
              type="button"
            >
              5 tickets
              <span
                aria-hidden="true"
                data-role="feed-status-caret"
              />
            </button>
            <div
              aria-hidden="true"
              data-open="false"
              data-role="header-status-panel"
              id="header-status-panel"
            >
              <div
                data-role="header-status-heading"
              >
                Tickets
              </div>
              <div
                data-role="header-status-empty"
              >
                No tickets
              </div>
            </div>
          </div>
        </header>
        <div
          data-role="backlog"
        >
          <div
            data-role="feed-empty"
          >
            <img
              alt=""
              aria-hidden="true"
              data-role="feed-empty-mark"
              src="/kiln-mark.svg"
            />
            <div
              data-role="feed-empty-status"
            >
              <span
                aria-hidden="true"
                data-active="true"
                data-role="feed-empty-pulse"
              />
              <span>
                3 building · last word 6m ago
              </span>
            </div>
          </div>
        </div>
      </div>
    </section>
    <div
      data-role="dock-region"
    >
      <div
        data-role="activity-row"
      />
      <div
        data-dock-state="listening"
        data-role="dock"
      >
        <div
          data-mode="voice"
          data-role="dock-controls"
        >
          <button
            aria-label="Talk"
            aria-pressed="true"
            data-dock-state="listening"
            data-role="dock-talk"
            type="button"
          >
            <span
              aria-hidden="true"
              data-role="dock-mic"
            >
              <span
                data-role="dock-mic-orb"
              />
              <span
                data-role="dock-mic-capsule"
              />
              <span
                data-role="dock-mic-arc"
              />
              <span
                data-role="dock-mic-stem"
              />
            </span>
            <span
              data-role="dock-label"
            >
              Listening…
            </span>
          </button>
          <button
            aria-label="Type a message"
            data-role="dock-keyboard"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="22"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="22"
            >
              <rect
                height="11"
                rx="2.5"
                width="19"
                x="2.5"
                y="4.5"
              />
              <path
                d="M6 8h.01M9.8 8h.01M13.6 8h.01M17.4 8h.01"
              />
              <path
                d="M6 11.3h.01M9.8 11.3h.01M13.6 11.3h.01M17.4 11.3h.01"
              />
              <path
                d="M8.5 13.6h7"
              />
              <path
                d="M8.8 21l3.2-3 3.2 3"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PrimaryScreenView > matches the DOM-structure snapshot: blocker + last-seen divider + load-more (4a, D2′) 1`] = `
<div>
  <div
    data-connection-state="connected"
    data-role="primary-screen"
  >
    <section
      aria-label="Feed"
      data-connection-state="connected"
      data-role="feed"
      role="region"
    >
      <div
        data-role="feed-scroll"
      >
        <header
          data-role="feed-header"
        >
          <div
            data-role="kiln-mark"
          >
            <img
              alt=""
              aria-hidden="true"
              data-role="kiln-glyph"
              src="/kiln-mark.svg"
            />
            <span
              data-role="kiln-wordmark"
            >
              Kiln
            </span>
          </div>
          <div
            data-role="header-status"
          >
            <button
              aria-controls="header-status-panel"
              aria-expanded="false"
              aria-haspopup="true"
              data-open="false"
              data-role="feed-status"
              type="button"
            >
              1 blocker · 1 update
              <span
                aria-hidden="true"
                data-role="feed-status-caret"
              />
            </button>
            <div
              aria-hidden="true"
              data-open="false"
              data-role="header-status-panel"
              id="header-status-panel"
            >
              <div
                data-role="header-status-heading"
              >
                Tickets
              </div>
              <div
                data-role="header-status-empty"
              >
                No tickets
              </div>
            </div>
          </div>
        </header>
        <div
          data-role="backlog"
        >
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="blocker"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  aria-hidden="true"
                  data-role="feed-card-dot"
                />
                <span
                  data-role="feed-card-label"
                >
                  Auth
                </span>
                <span
                  data-role="feed-card-age"
                >
                  now
                </span>
              </div>
              <p
                data-role="feed-card-body"
              >
                The /auth endpoint hands back both a session cookie and a JWT. Which should the client trust as the source of truth?
              </p>
            </article>
          </div>
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="update"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Rate limiting
                </span>
                <span
                  data-role="feed-card-age"
                >
                  2m
                </span>
              </div>
              <p
                data-role="feed-card-body"
              >
                Added a fixed-window limiter on /auth — 20 requests a minute per IP. Suite is green.
              </p>
            </article>
          </div>
          <div
            data-role="backlog-slot"
          >
            <div
              data-role="feed-divider"
              data-variant="last-seen"
            >
              Earlier
            </div>
            <article
              data-kind="update"
              data-role="feed-card"
              data-seen="true"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Email
                </span>
                <span
                  data-role="feed-card-age"
                >
                  14m
                </span>
              </div>
              <p
                data-role="feed-card-body"
                data-seen="true"
              >
                Drafted three subject lines for the password-reset email and kept the clearest.
              </p>
            </article>
          </div>
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="update"
              data-role="feed-card"
              data-seen="true"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Search
                </span>
                <span
                  data-role="feed-card-age"
                >
                  1h
                </span>
              </div>
              <p
                data-role="feed-card-body"
                data-seen="true"
              >
                Reindexed the product catalog; queries are back under 40ms.
              </p>
            </article>
          </div>
          <button
            data-role="feed-load-more"
            type="button"
          >
            Show earlier updates
          </button>
        </div>
      </div>
    </section>
    <div
      data-role="dock-region"
    >
      <div
        data-role="activity-row"
      />
      <div
        data-dock-state="listening"
        data-role="dock"
      >
        <div
          data-mode="voice"
          data-role="dock-controls"
        >
          <button
            aria-label="Talk"
            aria-pressed="true"
            data-dock-state="listening"
            data-role="dock-talk"
            type="button"
          >
            <span
              aria-hidden="true"
              data-role="dock-mic"
            >
              <span
                data-role="dock-mic-orb"
              />
              <span
                data-role="dock-mic-capsule"
              />
              <span
                data-role="dock-mic-arc"
              />
              <span
                data-role="dock-mic-stem"
              />
            </span>
            <span
              data-role="dock-label"
            >
              Listening…
            </span>
          </button>
          <button
            aria-label="Type a message"
            data-role="dock-keyboard"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="22"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="22"
            >
              <rect
                height="11"
                rx="2.5"
                width="19"
                x="2.5"
                y="4.5"
              />
              <path
                d="M6 8h.01M9.8 8h.01M13.6 8h.01M17.4 8h.01"
              />
              <path
                d="M6 11.3h.01M9.8 11.3h.01M13.6 11.3h.01M17.4 11.3h.01"
              />
              <path
                d="M8.5 13.6h7"
              />
              <path
                d="M8.8 21l3.2-3 3.2 3"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PrimaryScreenView > matches the DOM-structure snapshot: preview (4c) 1`] = `
<div>
  <div
    data-connection-state="connected"
    data-role="primary-screen"
  >
    <section
      aria-label="Feed"
      data-connection-state="connected"
      data-role="feed"
      role="region"
    >
      <div
        data-role="feed-scroll"
      >
        <header
          data-role="feed-header"
        >
          <div
            data-role="kiln-mark"
          >
            <img
              alt=""
              aria-hidden="true"
              data-role="kiln-glyph"
              src="/kiln-mark.svg"
            />
            <span
              data-role="kiln-wordmark"
            >
              Kiln
            </span>
          </div>
          <div
            data-role="header-status"
          >
            <button
              aria-controls="header-status-panel"
              aria-expanded="false"
              aria-haspopup="true"
              data-open="false"
              data-role="feed-status"
              type="button"
            >
              5 tickets
              <span
                aria-hidden="true"
                data-role="feed-status-caret"
              />
            </button>
            <div
              aria-hidden="true"
              data-open="false"
              data-role="header-status-panel"
              id="header-status-panel"
            >
              <div
                data-role="header-status-heading"
              >
                Tickets
              </div>
              <div
                data-role="header-status-empty"
              >
                No tickets
              </div>
            </div>
          </div>
        </header>
        <div
          data-role="backlog"
        >
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="preview"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-tag"
                >
                  Preview
                </span>
                <span
                  data-role="feed-card-label"
                >
                  Auth
                </span>
                <span
                  data-role="feed-card-age"
                >
                  now
                </span>
              </div>
              <p
                data-role="feed-card-body"
              >
                Here's the login screen running against the live endpoint.
              </p>
              <img
                alt="Auth"
                data-role="feed-card-image"
                src="https://cdn.example/login.png"
              />
            </article>
          </div>
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="update"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Rate limiting
                </span>
                <span
                  data-role="feed-card-age"
                >
                  2m
                </span>
              </div>
              <p
                data-role="feed-card-body"
              >
                Added a fixed-window limiter on /auth — 20 requests a minute per IP. Suite is green.
              </p>
            </article>
          </div>
        </div>
      </div>
    </section>
    <div
      data-role="dock-region"
    >
      <div
        data-role="activity-row"
      />
      <div
        data-dock-state="listening"
        data-role="dock"
      >
        <div
          data-mode="voice"
          data-role="dock-controls"
        >
          <button
            aria-label="Talk"
            aria-pressed="true"
            data-dock-state="listening"
            data-role="dock-talk"
            type="button"
          >
            <span
              aria-hidden="true"
              data-role="dock-mic"
            >
              <span
                data-role="dock-mic-orb"
              />
              <span
                data-role="dock-mic-capsule"
              />
              <span
                data-role="dock-mic-arc"
              />
              <span
                data-role="dock-mic-stem"
              />
            </span>
            <span
              data-role="dock-label"
            >
              Listening…
            </span>
          </button>
          <button
            aria-label="Type a message"
            data-role="dock-keyboard"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="22"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="22"
            >
              <rect
                height="11"
                rx="2.5"
                width="19"
                x="2.5"
                y="4.5"
              />
              <path
                d="M6 8h.01M9.8 8h.01M13.6 8h.01M17.4 8h.01"
              />
              <path
                d="M6 11.3h.01M9.8 11.3h.01M13.6 11.3h.01M17.4 11.3h.01"
              />
              <path
                d="M8.5 13.6h7"
              />
              <path
                d="M8.8 21l3.2-3 3.2 3"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PrimaryScreenView > matches the DOM-structure snapshot: proposal card with Accept 1`] = `
<div>
  <div
    data-connection-state="connected"
    data-role="primary-screen"
  >
    <section
      aria-label="Feed"
      data-connection-state="connected"
      data-role="feed"
      role="region"
    >
      <div
        data-role="feed-scroll"
      >
        <header
          data-role="feed-header"
        >
          <div
            data-role="kiln-mark"
          >
            <img
              alt=""
              aria-hidden="true"
              data-role="kiln-glyph"
              src="/kiln-mark.svg"
            />
            <span
              data-role="kiln-wordmark"
            >
              Kiln
            </span>
          </div>
          <div
            data-role="header-status"
          >
            <button
              aria-controls="header-status-panel"
              aria-expanded="false"
              aria-haspopup="true"
              data-open="false"
              data-role="feed-status"
              type="button"
            >
              3 tickets
              <span
                aria-hidden="true"
                data-role="feed-status-caret"
              />
            </button>
            <div
              aria-hidden="true"
              data-open="false"
              data-role="header-status-panel"
              id="header-status-panel"
            >
              <div
                data-role="header-status-heading"
              >
                Tickets
              </div>
              <div
                data-role="header-status-empty"
              >
                No tickets
              </div>
            </div>
          </div>
        </header>
        <div
          data-role="backlog"
        >
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="proposal"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Login Redesign
                </span>
                <span
                  data-role="feed-card-age"
                >
                  1m
                </span>
              </div>
              <button
                aria-label="Open ticket: Login Redesign"
                data-role="feed-card-open"
                type="button"
              >
                <span
                  data-role="feed-card-body"
                >
                  Rework the login screen to a single-column layout with inline validation.
                </span>
              </button>
              <div
                data-role="feed-card-actions"
              >
                <button
                  data-role="proposal-accept"
                  type="button"
                >
                  Accept
                </button>
              </div>
            </article>
          </div>
        </div>
      </div>
    </section>
    <div
      data-role="dock-region"
    >
      <div
        data-role="activity-row"
      />
      <div
        data-dock-state="listening"
        data-role="dock"
      >
        <div
          data-mode="voice"
          data-role="dock-controls"
        >
          <button
            aria-label="Talk"
            aria-pressed="true"
            data-dock-state="listening"
            data-role="dock-talk"
            type="button"
          >
            <span
              aria-hidden="true"
              data-role="dock-mic"
            >
              <span
                data-role="dock-mic-orb"
              />
              <span
                data-role="dock-mic-capsule"
              />
              <span
                data-role="dock-mic-arc"
              />
              <span
                data-role="dock-mic-stem"
              />
            </span>
            <span
              data-role="dock-label"
            >
              Listening…
            </span>
          </button>
          <button
            aria-label="Type a message"
            data-role="dock-keyboard"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="22"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="22"
            >
              <rect
                height="11"
                rx="2.5"
                width="19"
                x="2.5"
                y="4.5"
              />
              <path
                d="M6 8h.01M9.8 8h.01M13.6 8h.01M17.4 8h.01"
              />
              <path
                d="M6 11.3h.01M9.8 11.3h.01M13.6 11.3h.01M17.4 11.3h.01"
              />
              <path
                d="M8.5 13.6h7"
              />
              <path
                d="M8.8 21l3.2-3 3.2 3"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PrimaryScreenView > matches the DOM-structure snapshot: updates only (4b) 1`] = `
<div>
  <div
    data-connection-state="connected"
    data-role="primary-screen"
  >
    <section
      aria-label="Feed"
      data-connection-state="connected"
      data-role="feed"
      role="region"
    >
      <div
        data-role="feed-scroll"
      >
        <header
          data-role="feed-header"
        >
          <div
            data-role="kiln-mark"
          >
            <img
              alt=""
              aria-hidden="true"
              data-role="kiln-glyph"
              src="/kiln-mark.svg"
            />
            <span
              data-role="kiln-wordmark"
            >
              Kiln
            </span>
          </div>
          <div
            data-role="header-status"
          >
            <button
              aria-controls="header-status-panel"
              aria-expanded="false"
              aria-haspopup="true"
              data-open="false"
              data-role="feed-status"
              type="button"
            >
              5 tickets
              <span
                aria-hidden="true"
                data-role="feed-status-caret"
              />
            </button>
            <div
              aria-hidden="true"
              data-open="false"
              data-role="header-status-panel"
              id="header-status-panel"
            >
              <div
                data-role="header-status-heading"
              >
                Tickets
              </div>
              <div
                data-role="header-status-empty"
              >
                No tickets
              </div>
            </div>
          </div>
        </header>
        <div
          data-role="backlog"
        >
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="update"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Rate limiting
                </span>
                <span
                  data-role="feed-card-age"
                >
                  2m
                </span>
              </div>
              <p
                data-role="feed-card-body"
              >
                Added a fixed-window limiter on /auth — 20 requests a minute per IP. Suite is green.
              </p>
            </article>
          </div>
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="update"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Email
                </span>
                <span
                  data-role="feed-card-age"
                >
                  14m
                </span>
              </div>
              <p
                data-role="feed-card-body"
              >
                Drafted three subject lines for the password-reset email and kept the clearest.
              </p>
            </article>
          </div>
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="update"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Search
                </span>
                <span
                  data-role="feed-card-age"
                >
                  1h
                </span>
              </div>
              <p
                data-role="feed-card-body"
              >
                Reindexed the product catalog; queries are back under 40ms.
              </p>
            </article>
          </div>
        </div>
      </div>
    </section>
    <div
      data-role="dock-region"
    >
      <div
        data-role="activity-row"
      />
      <div
        data-dock-state="listening"
        data-role="dock"
      >
        <div
          data-mode="voice"
          data-role="dock-controls"
        >
          <button
            aria-label="Talk"
            aria-pressed="true"
            data-dock-state="listening"
            data-role="dock-talk"
            type="button"
          >
            <span
              aria-hidden="true"
              data-role="dock-mic"
            >
              <span
                data-role="dock-mic-orb"
              />
              <span
                data-role="dock-mic-capsule"
              />
              <span
                data-role="dock-mic-arc"
              />
              <span
                data-role="dock-mic-stem"
              />
            </span>
            <span
              data-role="dock-label"
            >
              Listening…
            </span>
          </button>
          <button
            aria-label="Type a message"
            data-role="dock-keyboard"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="22"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="22"
            >
              <rect
                height="11"
                rx="2.5"
                width="19"
                x="2.5"
                y="4.5"
              />
              <path
                d="M6 8h.01M9.8 8h.01M13.6 8h.01M17.4 8h.01"
              />
              <path
                d="M6 11.3h.01M9.8 11.3h.01M13.6 11.3h.01M17.4 11.3h.01"
              />
              <path
                d="M8.5 13.6h7"
              />
              <path
                d="M8.8 21l3.2-3 3.2 3"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
